--- a/Css/Css/login.css
+++ b/Css/Css/login.css
@@ -6,7 +6,7 @@
   padding: 0;
 }
 body {
-  background: url("../../images/back1.jpg") no-repeat;
+  background: url("../../images/andela.jpg") no-repeat;
   background-size: cover;
   background-position: center;
 }
