--- a/Css/Css/contact.css
+++ b/Css/Css/contact.css
@@ -7,16 +7,11 @@
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 body {
-  /* min-height: 100vh; */
-  background: rgb(209, 172, 172);
-  /* display: flex; */
-  /* justify-content: center; */
+  background: rgb(148, 105, 105);
   color: #000;
 }
-
 .container {
   width: 80%;
-  /* max-width: 1100px; */
   margin: 0 auto;
 }
 .topnav {
@@ -32,7 +27,7 @@ body {
   width: 60px;
   height: 30px;
 } */
-.topnav a {
+/* .topnav a {
   float: left;
   display: block;
   color: #f2f2f2;
@@ -40,7 +35,7 @@ body {
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
-}
+} */
 
 .topnav a:hover {
   background-color: #ddd;
@@ -154,7 +149,7 @@ body {
   opacity: 0.9;
 }
 .contact-form .send-btn {
-  float: right;
+  /* float: right; */
   background: #000;
   color: #fff;
   border: none;
@@ -171,13 +166,82 @@ body {
 .contact-form .send-btn:hover {
   background: #0582e3;
 }
+.twitter-btn {
+  background-color: #21afde;
+}
+a {
+  text-decoration: none;
+}
+hr {
+  margin-top: 20px;
+  width: 80%;
+}
+.or {
+  background: #fff;
+  width: 30px;
+  margin: -19px auto 10px;
+}
+img {
+  width: 150px;
+}
+
+/* footer {
+  background-color: #333333;
+  padding: 20px;
+  margin-top: 20px;
+}
+
+.rog .descr ol li a {
+  text-decoration: none;
+}
+
+.rog .lang {
+  margin-top: 50px;
+}
+
+.rog .descr {
+  margin-top: 30px;
+}
+
+#Contact .icons ul li {
+  display: inline;
+  text-align: center;
+  padding: 10px;
+}
+
+.icons {
+  text-align: center;
+  margin: 10px 0;
+}
+
+.fas {
+  color: white;
+}
+
+.fas:hover {
+  color: #bf4080;
+}
+
+.fab {
+  color: white;
+}
+
+.fab:hover {
+  color: #bf4080;
+}
+
+.Copyright {
+  text-align: center;
+  color: white;
+  border-top: #595959 solid 1px;
+} */
 
 @media screen and (max-width: 600px) {
   .topnav a:not(:first-child) {
     display: none;
   }
   .topnav a.icon {
-    float: right;
+    /* float: right; */
     display: block;
   }
 }
@@ -192,7 +256,7 @@ body {
     top: 0;
   }
   .topnav.responsive a {
-    float: none;
+    /* float: none; */
     display: block;
     text-align: left;
   }
