--- a/Css/Css/index.css
+++ b/Css/Css/index.css
@@ -371,6 +371,7 @@ button {
 .signup-btn {
   background-color: #1c8adb;
 }
+
 .twitter-btn {
   background-color: #21afde;
 }
@@ -388,6 +389,57 @@ hr {
 }
 img {
   width: 150px;
+}
+
+footer {
+  background-color: #333333;
+  padding: 20px;
+  margin-top: 20px;
+}
+
+.rog .descr ol li a {
+  text-decoration: none;
+}
+
+.rog .lang {
+  margin-top: 50px;
+}
+
+.rog .descr {
+  margin-top: 30px;
+}
+
+#Contact .icons ul li {
+  display: inline;
+  text-align: center;
+  padding: 10px;
+}
+
+.icons {
+  text-align: center;
+  margin: 10px 0;
+}
+
+.fas {
+  color: white;
+}
+
+.fas:hover {
+  color: #bf4080;
+}
+
+.fab {
+  color: white;
+}
+
+.fab:hover {
+  color: #bf4080;
+}
+
+.Copyright {
+  text-align: center;
+  color: white;
+  border-top: #595959 solid 1px;
 }
 
 
