--- a/Css/Css/articleDashboard.css
+++ b/Css/Css/articleDashboard.css
@@ -68,12 +68,12 @@ button,
 input[type="submit"] {
   background: none;
   border: none;
-  -webkit-appearance: none;
+  /* -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
   border-radius: 0;
   -webkit-border-radius: 0;
-  -moz-border-radius: 0;
+  -moz-border-radius: 0; */
 }
 
 .header-controlMenuButton svg {
@@ -129,24 +129,7 @@ input[type="submit"] {
 .header-controlMenuButton:hover {
   background-color: #171817;
 }
-.header-search {
-  width: 260px;
-  float: left;
-  position: absolute;
-  left: 0;
-}
-.header-search .spt {
-  float: left;
-  margin: 15px 25px 0 17px;
-}
-.header-search input {
-  float: left;
-  font-family: "Roboto", sans-serif;
-  color: #9a9a9a;
-  font-size: 14px;
-  margin-top: 15px;
-  border: none;
-}
+
 .header-menu {
   height: 50px;
 }
@@ -235,18 +218,6 @@ input[type="submit"] {
   margin-top: 6px;
 }
 
-#header .header-inner {
-  /*margin-left: 260px; */
-  position: relative;
-  background-color: #ffffff;
-  border-bottom: 1px solid #e4e5e6;
-  -webkit-box-shadow: 0px 2px 2px 0px rgba(50, 50, 50, 0.1);
-  -moz-box-shadow: 0px 2px 2px 0px rgba(50, 50, 50, 0.1);
-  box-shadow: 0px 2px 2px 0px rgba(50, 50, 50, 0.1);
-}
-
-/*------*/
-
 /*MENU*/
 #menu {
   position: fixed;
@@ -258,7 +229,7 @@ input[type="submit"] {
   width: 260px;
 }
 #menu .menu-wrapper-inner {
-  padding-top: 110px;
+  padding-top: 20px;
 }
 #menu .menu-wrapper {
   position: relative;
@@ -293,70 +264,11 @@ input[type="submit"] {
   width: 2000px;
   left: 0;
 }
-#menu .submenu {
-  display: none;
-}
-#menu .submenu-back {
-  border-bottom: 1px solid #eeeeee;
-}
-#menu .submenu-back .spt {
-  left: 25px;
-}
-#menu .submenu-back a {
-  padding-left: 40px;
-  font-size: 12px;
-}
-.header-menu {
-  position: relative;
-  -webkit-overflow-scrolling: touch;
-  padding: 0;
-  width: auto;
-  white-space: nowrap;
-}
+
 .menu-box {
   overflow: auto;
   position: relative;
   height: 100%;
-}
-
-.menu-header {
-  position: absolute;
-  z-index: 10;
-  border-bottom: 1px solid #e4e5e6;
-  width: 100%;
-  background-color: #ffffff;
-  -webkit-box-shadow: 0px 2px 2px 0px rgba(50, 50, 50, 0.1);
-  -moz-box-shadow: 0px 2px 2px 0px rgba(50, 50, 50, 0.1);
-  box-shadow: 0px 2px 2px 0px rgba(50, 50, 50, 0.1);
-}
-
-.shape-remove-shadow_white {
-  position: absolute;
-  background: #ffffff;
-  height: 50px;
-  width: 10px;
-  right: -3px;
-  top: 60px;
-}
-.shape-remove-shadow_green {
-  position: absolute;
-  background: #161616;
-  height: 60px;
-  width: 10px;
-  right: -3px;
-  top: 0;
-}
-
-.menu-mobile-background {
-  opacity: 0;
-  display: none;
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 100;
-  background: rgba(0, 0, 0, 0.8);
 }
 
 /*menu fechado*/
@@ -375,12 +287,12 @@ input[type="submit"] {
 #conteudo .conteudo-box {
   background-color: #ffffff;
   border-bottom: 1px solid #e4e5e6;
-  -webkit-box-shadow: 0px 2px 8px 0px rgba(50, 50, 50, 0.1);
+  /* -webkit-box-shadow: 0px 2px 8px 0px rgba(50, 50, 50, 0.1);
   -moz-box-shadow: 0px 2px 8px 0px rgba(50, 50, 50, 0.1);
   box-shadow: 0px 2px 8px 0px rgba(50, 50, 50, 0.1);
   border-radius: 4px;
   -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
+  -moz-border-radius: 4px; */
 }
 
 #conteudo .conteudo-title {
@@ -415,144 +327,7 @@ input[type="submit"] {
   right: 40px;
   cursor: pointer;
 }
-.borderradius .button-actions {
-  background-color: #141414;
-  width: 56px;
-  height: 56px;
-  bottom: 20px;
-  right: 60px;
-  border-radius: 50%;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  -webkit-box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.6);
-  -moz-box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.6);
-  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.6);
-}
-.borderradius .button-actions .spt {
-  display: none;
-}
-.borderradius .button-actions .plus {
-  position: absolute;
-  width: 14px;
-  height: 14px;
-  top: 50%;
-  left: 50%;
-  margin: -7px 0 0 -7px;
-}
-.borderradius .button-actions .plus .vert {
-  position: absolute;
-  height: 100%;
-  width: 2px;
-  background-color: #ffffff;
-  left: 6px;
-  top: 0;
-}
-.borderradius .button-actions .plus .hor {
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  background-color: #ffffff;
-  left: 0;
-  top: 6px;
-}
-.borderradius .button-actions:hover {
-  background-color: #9fcabb;
-}
 
-.borderradius .button-actions.active .vert {
-  display: none;
-}
-
-.boxWrapperActions {
-  position: fixed;
-  bottom: 90px;
-  right: 80px;
-}
-.boxWrapperActions-wrapper {
-  display: none;
-}
-.boxWrapperActions-box {
-  border: 1px solid #bebebe;
-}
-.boxWrapperActions .boxWrapperActions-box {
-  background-color: #ffffff;
-  border-color: #e6e6e6;
-  min-width: 130px;
-  -webkit-box-shadow: 0px 6px 30px 0px rgba(0, 0, 0, 0.3);
-  -moz-box-shadow: 0px 6px 30px 0px rgba(0, 0, 0, 0.3);
-  box-shadow: 0px 6px 30px 0px rgba(0, 0, 0, 0.3);
-  border-radius: 4px;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-}
-
-.boxWrapperActions .boxWrapperActions-title {
-  border-bottom: 1px solid #dcdcdc;
-  padding: 12px 20px;
-  font-weight: 400;
-}
-.boxWrapperActions ul {
-  padding: 15px 0;
-}
-.boxWrapperActions ul li:hover {
-  background-color: #eeeeee;
-}
-.boxWrapperActions ul li a {
-  padding: 5px 20px;
-  display: block;
-}
-
-.boxOptions {
-  position: absolute;
-  right: 0;
-  top: 0;
-  padding-right: 10px;
-}
-.boxOptions .boxOptions-item_language {
-  float: left;
-}
-.boxOptions .boxOptions-item_user {
-  float: left;
-}
-.boxOptions .boxOptions-button {
-  height: 50px;
-  padding: 0 10px;
-  cursor: pointer;
-}
-.boxOptions .boxOptions-button.active,
-.boxOptions .boxOptions-button:hover {
-  background-color: #ececec;
-}
-.boxOptions .boxOptions-item {
-  position: relative;
-}
-.boxOptionsWrapper {
-  position: absolute;
-  right: 0;
-  top: 60px;
-}
-.boxOptionsWrapper-container {
-  display: none;
-}
-.boxOptionsWrapper-content {
-  background-color: #ffffff;
-  border-color: #e6e6e6;
-  min-width: 130px;
-  -webkit-box-shadow: 0px 6px 30px 0px rgba(0, 0, 0, 0.3);
-  -moz-box-shadow: 0px 6px 30px 0px rgba(0, 0, 0, 0.3);
-  box-shadow: 0px 6px 30px 0px rgba(0, 0, 0, 0.3);
-  border-radius: 4px;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-}
-.boxOptionsWrapper-content ul li:hover {
-  background-color: #eeeeee;
-}
-.boxOptionsWrapper-content ul li a {
-  padding: 5px 20px;
-  display: block;
-  font-size: 14px;
-}
 .main-content {
   padding: 44px;
 }
@@ -576,8 +351,8 @@ input[type="submit"] {
 }
 .personalArticles img {
   align-self: flex-start;
-  /* width: 150px;
-  height: 100px; */
+  width: 150px;
+  height: 100px;
 }
 
 @media screen and (max-width: 768px) {
@@ -589,14 +364,6 @@ input[type="submit"] {
     margin-left: 0 !important;
   }
 
-  #menu {
-    z-index: 999;
-  }
-
-  #menu {
-    left: -260px;
-    opacity: 0;
-  }
   #hit-menu {
     display: block;
   }
@@ -608,29 +375,12 @@ input[type="submit"] {
     padding: 0;
   }
 
-  .shape-remove-shadow_green,
-  .shape-remove-shadow_white {
-    display: none;
-  }
   #conteudo .conteudo-inner {
     padding-left: 0 !important;
   }
 
   #conteudo .conteudo-wrapper {
     padding: 20px 10px;
-  }
-  .header-nomeEmpresa_mobile {
-    font-size: 14px;
-  }
-
-  .borderradius .button-actions {
-    right: 30px;
-    width: 40px;
-    height: 40px;
-  }
-  .borderradius .boxWrapperActions {
-    bottom: 60px;
-    right: 80px;
   }
 
   .articles {
@@ -643,7 +393,7 @@ input[type="submit"] {
     width: 100%;
   }
   .personalArticles img {
-    /* display: flex; */
+    display: flex;
     max-height: 100%;
     max-width: 100%;
     margin: auto;
@@ -668,37 +418,16 @@ input[type="submit"] {
 	* < 568px
 */
 @media screen and (max-width: 568px) {
-  .col-xs-1 {
-    width: 100% !important;
-  }
-
-  .col-xs-hide {
-    display: none !important;
-  }
-  .col-xs-show {
-    display: block !important;
-  }
-
   .personalArticles {
     display: flex;
     flex-direction: column;
-    width: 40vw;
+    width: 50vw;
   }
   .personalArticles img {
     display: flex;
-    /* height: 100%;
-    width: 20vw; */
-  }
-
-  /* .personalArticles {
-    display: flex;
-    flex-direction: column;
-    width: 80vw;
-  }
-  .personalArticles img {
     height: 100%;
-    width: 60vw;
-  } */
+    width: 50vw;
+  }
 
   .personalArticles .responsive a {
     width: 100%;
@@ -713,17 +442,6 @@ input[type="submit"] {
 	* > 568px e < 768
 */
 @media (min-width: 568px) and (max-width: 768px) {
-  .col-sm-1 {
-    width: 100% !important;
-  }
-
-  .col-sm-hide {
-    display: none !important;
-  }
-  .col-sm-show {
-    display: block !important;
-  }
-
   .personalArticles img {
     height: 100%;
     width: 100vw;
@@ -735,61 +453,5 @@ input[type="submit"] {
   }
   h1 {
     text-align: center;
-  }
-}
-
-/*
-	* > 768px e < 1024px
-*/
-/* @media (min-width: 768px) and (max-width: 1024px) {
-  .col-md-1 {
-    width: 100% !important;
-  }
-
-  .col-md-hide {
-    display: none !important;
-  }
-  .col-md-show {
-    display: block !important;
-  }
-
-  .personalArticles {
-    display: flex;
-    flex-direction: column;
-    width: 50vw;
-    left: auto;
-  }
-  .personalArticles img {
-    height: 100%;
-    width: 100%;
-  }
-
-  .personalArticles .responsive a {
-    width: 100%;
-    position: relative;
-  }
-} */
-
-/*
-	* 1024px e 1280px
-*/
-
-@media (min-width: 1024px) and (max-width: 1280px) {
-  .col-lg-1 {
-    width: 100% !important;
-  }
-
-  .col-lg-hide {
-    display: none !important;
-  }
-  .col-lg-show {
-    display: block !important;
-  }
-}
-
-@media (min-width: 240px) and (max-width: 500px) {
-  .personalArticles img {
-    width: 100%;
-    height: 100%;
   }
 }
