--- a/Css/Css/contact.css
+++ b/Css/Css/contact.css
@@ -14,46 +14,54 @@ body {
   width: 80%;
   margin: 0 auto;
 }
-.topnav {
-  overflow: auto;
-  /* background-color: #333; */
-  width: 100%;
-  /* margin: 0 auto; */
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 8vh;
 }
-.topnav .container {
-  padding: 0 !important;
+
+.nav-links {
+  display: flex;
+  justify-content: space-around;
+  width: 30%;
+  float: right;
 }
-/* .topnav .logo {
-  width: 60px;
-  height: 30px;
-} */
-/* .topnav a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
+
+.logo a {
   text-decoration: none;
-  font-size: 17px;
-} */
-
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
+  color: inherit;
+  float: left;
 }
 
-.topnav a.active {
-  background-color: #4caf50;
-  color: white;
+.nav-links li {
+  list-style: none;
+  transition-duration: 0.3s;
 }
 
-.topnav .icon {
-  display: none;
+.nav-links a {
+  text-decoration: none;
+  color: inherit;
+  font-weight: 600;
+  padding: 1.5rem;
 }
-/* .topnav .logo {
-  width: 60px;
-  height: 30px;
-} */
+
+.nav-links li:hover {
+  background-color: #ff00001a;
+  border-radius: 10px;
+}
+
+.burgerIcon div {
+  width: 25px;
+  height: 3px;
+  margin: 5px;
+  background-color: black;
+}
+
+.burgerIcon {
+  /* display: none; */
+  cursor: pointer;
+}
 /* Showcae*/
 .showcase {
   width: 100%;
@@ -235,6 +243,53 @@ img {
   color: white;
   border-top: #595959 solid 1px;
 } */
+@media only screen and (max-width: 768px) {
+  body {
+    overflow-x: hidden;
+  }
+
+  .container {
+    padding: 0 5px;
+  }
+
+  nav {
+    justify-content: space-between;
+  }
+
+  .nav-links {
+    position: absolute;
+    right: 0px;
+    height: 80vh;
+    top: 8vh;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+    transform: translateX(100%);
+    display: none;
+  }
+
+  .burger {
+    display: block;
+  }
+}
+
+.nav-active {
+  transform: translateX(0%);
+  display: flex;
+}
+
+@keyframes navlink-fade {
+  from {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0px);
+  }
+}
 
 @media screen and (max-width: 600px) {
   .topnav a:not(:first-child) {
