--- a/Css/Css/messageDashboard.css
+++ b/Css/Css/messageDashboard.css
@@ -68,12 +68,12 @@ button,
 input[type="submit"] {
   background: none;
   border: none;
-  -webkit-appearance: none;
+  /* -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
   border-radius: 0;
   -webkit-border-radius: 0;
-  -moz-border-radius: 0;
+  -moz-border-radius: 0; */
 }
 
 .header-controlMenuButton svg {
@@ -240,9 +240,9 @@ input[type="submit"] {
   position: relative;
   background-color: #ffffff;
   border-bottom: 1px solid #e4e5e6;
-  -webkit-box-shadow: 0px 2px 2px 0px rgba(50, 50, 50, 0.1);
+  /* -webkit-box-shadow: 0px 2px 2px 0px rgba(50, 50, 50, 0.1);
   -moz-box-shadow: 0px 2px 2px 0px rgba(50, 50, 50, 0.1);
-  box-shadow: 0px 2px 2px 0px rgba(50, 50, 50, 0.1);
+  box-shadow: 0px 2px 2px 0px rgba(50, 50, 50, 0.1); */
 }
 
 /*------*/
@@ -325,9 +325,9 @@ input[type="submit"] {
   border-bottom: 1px solid #e4e5e6;
   width: 100%;
   background-color: #ffffff;
-  -webkit-box-shadow: 0px 2px 2px 0px rgba(50, 50, 50, 0.1);
+  /* -webkit-box-shadow: 0px 2px 2px 0px rgba(50, 50, 50, 0.1);
   -moz-box-shadow: 0px 2px 2px 0px rgba(50, 50, 50, 0.1);
-  box-shadow: 0px 2px 2px 0px rgba(50, 50, 50, 0.1);
+  box-shadow: 0px 2px 2px 0px rgba(50, 50, 50, 0.1); */
 }
 
 .shape-remove-shadow_white {
@@ -655,7 +655,7 @@ input[type="text"]:focus {
   }
   .list {
     background: grey;
-    width: 78%;
+    width: 100%;
     margin: 10px;
     text-align: justify;
   }
@@ -673,7 +673,7 @@ input[type="text"]:focus {
   }
   input[type="text"] {
     width: 100%;
-    padding: 12px 20px;
+    /* padding: 12px 20px; */
     margin: 8px 0;
     box-sizing: border-box;
     border: 1px solid #555;
@@ -716,7 +716,7 @@ input[type="text"]:focus {
   #messages-list {
     display: flex;
     flex-direction: column;
-    width: 50vw;
+    width: 70vw;
   }
   /* .personalArticles img {
     display: flex;
