--- a/Css/Css/sharedMenu.css
+++ b/Css/Css/sharedMenu.css
@@ -32,7 +32,7 @@ nav {
   display: flex;
   justify-content: space-around;
   width: 30%;
-  float: right;
+  /* float: right; */
 }
 
 .logo a {
@@ -66,7 +66,7 @@ nav {
 }
 
 .burgerIcon {
-  /* display: none; */
+  display: none;
   cursor: pointer;
 }
 
@@ -97,7 +97,7 @@ nav {
     display: none;
   }
 
-  .burger {
+  .burgerIcon {
     display: block;
   }
 }
